--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -44,6 +44,8 @@ body {
   border-top: 1px solid #e5e5e5;
 }
 
+.angular-google-map-container { height: 400px; }
+
 .container-narrow > hr {
   margin: 30px 0;
 }
