--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,1 +1,7 @@
-<google-map center="map.center" zoom="map.zoom"></google-map>
+<google-map center="map.center" zoom="map.zoom">
+  <marker
+        idKey='1'
+        coords='{"latitude":"45","longitude":"-73"}'
+        >
+  </marker>
+</google-map>
