Added database return to map

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,7 +1,7 @@
+{{mapMarkers.id}}
 <google-map center="map.center" zoom="map.zoom">
-  <marker
-        idKey='1'
-        coords='{"latitude":"45","longitude":"-73"}'
-        >
-  </marker>
+  <markers
+        models="mapMarkers"
+        coords="'self'">
+  </markers>
 </google-map>
